tests/baselines/reference/tsxElementResolution.errors.txt
tests/cases/conformance/jsx/tsxElementResolution.tsx(18,9): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/tsxElementResolution.tsx(19,9): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/tsxElementResolution.tsx(23,9): error TS2602: The global type 'JSX.Element' must exist when using JSX.
tests/cases/conformance/jsx/tsxElementResolution.tsx(24,9): error TS2602: The global type 'JSX.Element' must exist when using JSX.


==== tests/cases/conformance/jsx/tsxElementResolution.tsx (4 errors) ====
    
    declare namespace JSX {
    	interface IntrinsicElements {
    		foundFirst: { x: string };
    		'string_named';
    		'var';
    	}
    }
    
    class foundFirst { }
    class Other {}
    
    module Dotted {
    	export class Name { }
    }
    
    // Should find the intrinsic element, not the class element
    var a = <foundFirst  x="hello" />;
            ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    var b = <string_named />;
            ~~~~~~~~~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    // TODO: This should not be a parse error (should
    //        parse a property name here, not identifier)
    // var c = <var />;
    var d = <Other />;
            ~~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    var e = <Dotted.Name />;
            ~~~~~~~~~~~~~~~
!!! error TS2602: The global type 'JSX.Element' must exist when using JSX.
    